--- a/_includes/setup/windows-python.html
+++ b/_includes/setup/windows-python.html
@@ -2,13 +2,9 @@
   <h3>Windows / Python</h3>
 
   <p>
-    For Windows we recommend the Enthought
-    <a href="https://www.enthought.com/downloads/">Canopy</a>
-    distribution since it seems to work well with Git Bash.
+    For Windows we recommend
+    <a href="http://continuum.io/downloads">Anaconda</a>
+    from Continuum Analytics.
   </p>
-
-  <p>
-    For other options check the Python4Astronomers page on
-    <a href="http://python4astronomers.github.com/installation/python_install.html">installing scientific Python</a>.
-  </p>
+  
 </div>
