Remote Linux machines provided

--- a/_includes/bootcamps/requirements.html
+++ b/_includes/bootcamps/requirements.html
@@ -1,6 +1,11 @@
 <p>
   <strong>Requirements:</strong>
-  Participants must bring a laptop with a few specific software
-  packages installed. (The list will be sent to participants a week
-  before the bootcamp.)
+  
+  The bootcamp will take place in a computer lab with 40 Windows
+  workstations, there will be remote access to a Linux machines 
+  provided by the University.
+  
+  Participants may being along their own laptop, it is recommended 
+  to install the packages below ahead of the boot camp. (The list 
+  will be sent to participants a week before the bootcamp.)
 </p>
